--- a/birthday.html
+++ b/birthday.html
@@ -11,8 +11,8 @@
       <div class="untoldcoding">
         <div class="img-container">
           <img
-            src="https://i.postimg.cc/ZKhfkqhD/Black-And-Gold-Happy-Birthday-Document-A4.png"
-            alt=""
+            src='as.png'
+            alt="Image"
           />
         </div>
         <div class="untoldcoding-details">
