--- a/birthday.html
+++ b/birthday.html
@@ -28,5 +28,10 @@
         </div>
       </div>
     </div>
+    
+    <footer>
+        <p>&copy; 2024 <a href="https://bio.site/cipherwizardanash"> Codawallah</a> All rights reserved.</p>
+    </footer>
+    
   </body>
 </html>
